syntax = "proto3";

package org.example;

option java_multiple_files = true;

message BucketRequest {
  string name = 1;
  string description = 2;
}

message BucketResponse {
  string name = 1;
  string description = 2;
}

service BucketService {
  rpc createBucket(BucketRequest) returns (BucketResponse);
}